--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
   --text: #343439;
   --text-gray: #7d7d7d;
   --border: #f0f0f4;
-  --border: #000;
+  /* --border: #000; */
   --swiper-btn: #fff6f8;
   --swiper-btn-hover: #ffeff1;
   --color: #f94f63;
