--- a/css/style.css
+++ b/css/style.css
@@ -390,15 +390,15 @@ small {
 }
 
 .border::after {
-  left: 25%;
+  left: calc(25% - 1px);
 }
 
 .border::before {
-  right: 25%;
+  right: calc(25% - 3px);
 }
 
 .border span {
-  left: 50%;
+  left: calc(50% + 0.5px);
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
 }
@@ -406,6 +406,54 @@ small {
 /* end border */
 
 /* start button */
+
+.button {
+    background: none;
+    padding: 15px 35px;
+    border: 3px solid #fff;
+    border-radius: 20%/50%;
+    color: #fff;
+    font-size: 30px;
+    position: relative;
+    top: 140px; bottom: -1px;
+    cursor: pointer;
+    display: inline-block;
+    transition: all .3s;
+    overflow: hidden;
+    outline: none
+}
+
+.button:hover {
+    color: #00bf9c
+}
+
+.button:before,
+.button:after {
+    content: "";
+    background: #fff;
+    position: absolute;
+    bottom: -1px; left: 0;
+    height: 105%; width: 0;
+    transition: all .3s;
+    border-radius: 15%/50%;
+}
+
+.button:before {
+    transform: translateX(-15px) skewX(-35deg);
+    z-index: -1;
+}
+
+.button:after {
+    z-index: -2;
+    transform: translateX(-10px) skewX(-35deg);
+    background: #cecece
+}
+
+.button:hover:before,
+.button:hover:after {
+    width: 100%;
+    left: 0
+}
 
 .btn {
   display: flex;
@@ -431,8 +479,8 @@ small {
   display: flex;
   height: 9px;
   position: relative;
-  -webkit-transform: translate(0, 1px);
-  transform: translate(0, 1px);
+  -webkit-transform: translate(0, 0px);
+  transform: translate(0, 0px);
   -webkit-transition: -webkit-transform 0.15s linear;
   transition: transform 0.15s linear;
 }
@@ -447,9 +495,11 @@ small {
 
 .btn__arrow::after {
   content: "";
+  display: flex;
   width: 10px;
   max-width: 0px;
-  height: 1.5px;
+  height: 1.2px;
+  flex: 0 0 auto;
   position: absolute;
   top: 50%;
   right: 2px;
@@ -477,8 +527,8 @@ small {
 }
 
 .btn:hover .btn__arrow {
-  -webkit-transform: translate(5px, 1px);
-  transform: translate(5px, 1px);
+  -webkit-transform: translate(5px, 0px);
+  transform: translate(5px, 0px);
 }
 
 .btn.btn__primary {
@@ -516,6 +566,50 @@ small {
 .btn.btn__link:hover {
   color: var(--text);
   background-color: transparent;
+}
+
+.text_color {
+  display: inline-flex;
+  width: max-content;
+  position: relative;
+  background: var(--bg);
+  overflow: hidden;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.text_color::before {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  width: calc(100% - 2px);
+  height: calc(100% - 2px);
+  mix-blend-mode: screen;
+  background-color: var(--purple);
+  background: linear-gradient(124.92deg, #F57A78 7%, #F94F63 25.1%, #B73CB7 50.03%, #7B5BDD 87.11%);
+  background-size: 400% 400%;
+  -webkit-animation: gradient-back 5s ease infinite;
+  animation: gradient-back 5s ease infinite;
+}
+
+.text_line {
+  padding: 0 10px;
+  position: relative;
+}
+
+.text_line::before {
+  content: "";
+  width: 1px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: var(--color);
 }
 
 /* end button */
@@ -670,6 +764,10 @@ html.has-scroll-dragging {
   mix-blend-mode: normal;
 }
 
+.cursor.cursor__slider.hover {
+  mix-blend-mode: difference;
+}
+
 .cursor::before {
   position: absolute;
   content: "";
@@ -690,6 +788,7 @@ html.has-scroll-dragging {
   background-color: var(--text);
 }
 
+.cursor.cursor__slider.hover::before,
 .hover.cursor::before {
   background-color: var(--color);
 }
@@ -704,12 +803,12 @@ html.has-scroll-dragging {
 
 .cursor__slider.active.cursor::before,
 .cursor__showreel.hover.active.cursor::before,
-.cursor__showreel.active.cursor::before,
-.cursor__slider.hover.active.cursor::before {
+.cursor__showreel.active.cursor::before {
   width: 100px;
   height: 100px;
 }
 
+.cursor__slider.hover.active.cursor::before,
 .hover.cursor::before {
   width: 30px;
   height: 30px;
@@ -724,6 +823,7 @@ html.has-scroll-dragging {
   transition: width .2s linear, height .2s linear, background-color .2s linear;
 }
 
+.cursor.cursor__slider.hover .cursor__block,
 .cursor__block {
   position: relative;
   display: -webkit-box;
@@ -1218,24 +1318,13 @@ html.has-scroll-dragging {
   z-index: 2;
 }
 
-.hero__back::after {
-  content: "";
-  width: 100%;
-  height: 350px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: var(--bg);
-  clip-path: polygon(0 calc(100% - 280px), 100% 0, 100% 100%, 0% 100%);
-}
-
 .hero__back::before {
   content: "";
   width: 200%;
-  height: 350px;
+  height: 100vh;
   position: absolute;
   left: -50%;
-  bottom: 0;
+  bottom: calc(-100vh + 350px);
   z-index: 1;
   background-color: var(--bg);
   -webkit-transform: rotate(-6deg);
@@ -1365,7 +1454,7 @@ html.has-scroll-dragging {
 }
 
 .hero__head span {
-  color: var(--purple);
+  background-color: var(--bg-gray);
 }
 
 .hero__head,
@@ -1490,12 +1579,14 @@ html.has-scroll-dragging {
   display: flex;
   padding: 80px 0;
   justify-content: space-between;
-  gap: 40px;
+  gap: 20px;
+  position: relative;
+  z-index: 2;
 }
 
 .about__info {
   display: flex;
-  width: calc(50% - 20px);
+  width: calc(50% - 10px);
   max-width: 700px;
   flex-direction: column;
   gap: 15px;
@@ -1511,7 +1602,7 @@ html.has-scroll-dragging {
 
 .about__list {
   display: flex;
-  width: calc(50% - 20px);
+  width: calc(50% - 10px);
   padding: 60px 0 0;
   flex-direction: column;
   gap: 20px;
@@ -1608,6 +1699,10 @@ html.has-scroll-dragging {
 
 /* start products_top */
 
+.products_top__container {
+  padding: 0 90px;
+}
+
 .products_top__block {
   display: flex;
   padding: 80px 0;
@@ -1625,20 +1720,22 @@ html.has-scroll-dragging {
 
 .products_top__left {
   display: flex;
-  width: calc(50% - 39px);
+  width: calc(50% - 40px);
   max-width: 700px;
+  padding: 0 10px;
   flex-direction: column;
   gap: 15px;
 }
 
 .products_top__right {
   display: flex;
-  width: calc(50% + 1px);
-  gap: 6.5px;
+  padding: 44px 0 0;
+  width: 50%;
 }
 
 .products_top__info {
   display: flex;
+  width: 50%;
   flex-direction: column;
   gap: 15px;
 }
@@ -1650,20 +1747,6 @@ html.has-scroll-dragging {
 
 .products_top__description {
   padding: 0 10px;
-}
-
-.products_top__heading {
-  position: relative;
-}
-
-.products_top__heading::before {
-  content: "";
-  width: 1px;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: var(--color);
 }
 
 .products_top__svg {
@@ -1732,6 +1815,7 @@ html.has-scroll-dragging {
 
 .products_slider__swiper {
   display: flex;
+  padding: 0 10px 20px;
   flex-direction: column;
   gap: 30px;
   overflow: hidden;
@@ -1778,10 +1862,162 @@ html.has-scroll-dragging {
 }
 
 .products_slider__desc {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+  box-orient: vertical;
   color: var(--text-gray);
+  overflow: hidden;
 }
 
 /* end products_slider */
+
+/* start advantages */
+
+.advantages__container {
+  padding: 0 90px;
+}
+
+.advantages__block {
+  display: flex;
+  padding: 80px 0;
+  flex-direction: column;
+  gap: 70px;
+  position: relative;
+  z-index: 2;
+}
+
+.advantages__flex {
+  display: flex;
+  padding: 0 10px;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.advantages__left {
+  display: flex;
+  width: calc(50% - 10px);
+  max-width: 700px;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.advantages__right {
+  display: flex;
+  width: calc(50% - 10px);
+  align-items: flex-end;
+}
+
+.advantages__list {
+  display: flex;
+}
+
+.advantages__item {
+  width: 25%;
+}
+
+.advantages__info {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.advantages__svg {
+  display: flex;
+  width: 68px;
+  height: 48px;
+}
+
+.advantages__svg svg {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.advantages__heading {
+  padding: 5px 10px 0;
+}
+
+.advantages__description {
+  padding: 0 10px;
+  color: var(--text-gray);
+}
+
+/* end advantages */
+
+/* start canwedo */
+
+.canwedo__container {
+  padding: 0 90px;
+}
+
+.canwedo__block {
+  display: flex;
+  padding: 80px 0;
+  flex-direction: column;
+  gap: 40px;
+  position: relative;
+  z-index: 2;
+}
+
+.canwedo__flex {
+  display: flex;
+  padding: 0 10px;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.canwedo__left {
+  display: flex;
+  width: calc(50% - 10px);
+  max-width: 700px;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.canwedo__right {
+  display: flex;
+  width: calc(50% - 10px);
+  align-items: flex-end;
+}
+
+.canwedo__buttons {
+  padding: 20px 0 0;
+}
+
+.canwedo__information {
+  display: flex;
+  gap: 20px;
+}
+
+.canwedo__info {
+  display: flex;
+  width: calc(50% - 10px);
+  flex-direction: column;
+  gap: 15px;
+}
+
+.canwedo__image {
+  display: flex;
+  width: calc(50% - 10px);
+}
+
+.canwedo__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.canwedo__description {
+  padding: 0 10px;
+}
+
+.canwedo__link {
+  padding: 15px 10px 0;
+}
+
+/* end canwedo */
 
 /* start 1919px */
 @media (max-width: 1919px) {
@@ -1836,6 +2072,12 @@ html.has-scroll-dragging {
   .btn input {
     font-size: 14px;
     line-height: 19.6px;
+  }
+
+  .products_top__container,
+  .advantages__container,
+  .canwedo__container {
+    padding: 0 60px;
   }
 }
 /* end 1919px */
@@ -1893,6 +2135,12 @@ html.has-scroll-dragging {
   .btn input {
     font-size: 14px;
     line-height: 19.6px;
+  }
+
+  .products_top__container,
+  .advantages__container,
+  .canwedo__container {
+    padding: 0 20px;
   }
 }
 /* end 1439px */
@@ -1957,6 +2205,12 @@ html.has-scroll-dragging {
     font-size: 14px;
     line-height: 19.6px;
   }
+
+  .products_top__container,
+  .advantages__container,
+  .canwedo__container {
+    padding: 0 10px;
+  }
 }
 /* end 767px */
 
@@ -1970,15 +2224,19 @@ html.has-scroll-dragging {
 /* start animate */
 
 .animate_image img {
-  height: 0px;
-  -webkit-transition: height 0.4s linear;
-  transition: height 0.4s linear;
+  opacity: 0;
+  -webkit-transform: scale(0.9);
+  transform: scale(0.9);
+  -webkit-transition: opacity 0.4s linear, -webkit-transform 0.4s linear;
+  transition: opacity 0.4s linear, transform 0.4s linear;
   -webkit-transition-delay: 0.3s;
   transition-delay: 0.3s;
 }
 
 .loaded .animate_image.animated img {
-  height: 100%;
+  opacity: 1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
 }
 
 .animate_top {
