--- a/css/style.css
+++ b/css/style.css
@@ -1420,42 +1420,47 @@ html.has-scroll-dragging {
   z-index: 1;
   background-color: var(--purple);
   -webkit-animation: gradient-back 5s ease infinite;
-  animation: gradient-back 5§s ease infinite;
+  animation: gradient-back 5s ease infinite;
   clip-path: polygon(6px 0, 100% 0, calc(100% - 6px) 100%, 0 100%);
 }
 
 .hero__back_line:nth-child(1)::before {
   width: 10%;
   left: 64.7%;
-  background: linear-gradient(-90deg, #f94f63, #d74f8c, #b73cb7, #7b5bdd, #99ff99);
+  background: rgb(255,135,189);
+  background: linear-gradient(90deg, rgba(255,135,189,1) 5%, rgba(255,92,205,1) 35%, rgba(250,72,153,1) 53%, rgba(249,80,109,1) 80%, rgba(250,71,114,1) 100%);
   background-size: 500% 500%;
 }
 
 .hero__back_line:nth-child(2)::before {
   width: 15%;
   left: 62%;
-  background: linear-gradient(-90deg, #ff9831, #f94f63, #f9007d, #ff9831, #99ff99);
+  background: rgb(130,42,203);
+  background: linear-gradient(90deg, rgba(130,42,203,1) 0%, rgba(153,68,224,1) 32%, rgba(150,118,249,1) 56%, rgba(148,113,254,1) 76%, rgba(136,107,224,1) 100%);
   background-size: 500% 500%;
 }
 
 .hero__back_line:nth-child(2)::after {
   width: 15%;
   left: 22%;
-  background: linear-gradient(-90deg, #f94f63, #d74f8c, #b73cb7, #7b5bdd, #99ff99);
+  background: rgb(123,91,221);
+  background: linear-gradient(90deg, rgba(123,91,221,1) 0%, rgba(157,56,245,1) 24%, rgba(171,87,255,1) 63%, rgba(193,67,255,1) 83%, rgba(192,57,254,1) 100%);
   background-size: 500% 500%;
 }
 
 .hero__back_line:nth-child(3)::before {
   width: 7%;
   left: 70%;
-  background: linear-gradient(-90deg, #ff9831, #ff9831, #f94f63, #f9007d, #99ff99);
+  background: rgb(183,60,183);
+  background: linear-gradient(90deg, rgba(183,60,183,1) 1%, rgba(224,119,224,1) 42%, rgba(235,128,207,1) 66%, rgba(232,113,185,1) 81%, rgba(215,79,140,1) 100%);
   background-size: 500% 500%;
 }
 
 .hero__back_line:nth-child(3)::after {
   width: 8%;
   left: 24%;
-  background: linear-gradient(-90deg, #ff9831, #ff9831, #f94f63, #f9007d, #99ff99);
+  background: rgb(249,79,162);
+  background: linear-gradient(90deg, rgba(249,79,162,1) 1%, rgba(255,107,160,1) 37%, rgba(255,120,136,1) 71%, rgba(255,103,121,1) 89%, rgba(249,79,99,1) 100%);
   background-size: 500% 500%;
 }
 
